--- a/app/assets/stylesheets/building/show.scss
+++ b/app/assets/stylesheets/building/show.scss
@@ -20,7 +20,7 @@
 	}
 
 	.add--assets{
-		padding: 10px 10px 0px 20px;
+		padding: 10px 0px 20px 0px;
 	}
 
 	#content {
@@ -250,7 +250,7 @@
 				}
 			}
 			.section-container, .singleTop .summary{
-				padding: 10px 20px 20px;
+				padding: 10px 16px 20px;
 			}
 			h3{
 				font-size: 18px;
